--- a/scroll.css
+++ b/scroll.css
@@ -40,3 +40,15 @@
     width: 300px;
     background-color: crimson;
   }
+  h1{
+    font-size: 60px;
+    position: relative;
+    background-color: rgb(36, 52, 223);
+    color: white;
+  }
+  h2{
+    font-size: 60px;
+    position: relative;
+    background-color: rgb(178, 218, 78);
+    color: white;
+  }
